<?xml version="1.0" encoding="utf-8"?>
<!--线性布局  LinearLayout 根布局-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <!--标题栏-->
<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:paddingLeft="15dp"-->
<!--        android:paddingRight="15dp"-->
<!--        android:background="@color/purple_700">-->

<!--        <ImageView-->
<!--            android:layout_width="25dp"-->
<!--            android:layout_height="25dp"-->
<!--            android:layout_alignParentLeft="true"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:onClick="back"-->
<!--            android:src="@drawable/ic_back" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:text="@string/register_title"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="16dp" />-->
<!--    </RelativeLayout>-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--表单布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <!--头像-->
                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_default_man" />
            </RelativeLayout>
            <!--账号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/register_account"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textSize="14dp"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:hint="@string/register_account_hint"/>
            </LinearLayout>
            <!--昵称-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/register_name"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/et_nickName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textSize="14dp"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:hint="@string/register_name_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/register_gender"
                    android:textSize="14dp" />
                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rb_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textSize="14dp"
                        android:text="@string/register_gender_man"/>
                    <RadioButton
                        android:id="@+id/rb_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:text="@string/register_gender_woman"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/register_id_number"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/et_identityCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textSize="14dp"
                    android:singleLine="true"
                    android:hint="@string/register_id_number_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/register_phone"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textSize="14dp"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:hint="@string/register_phone_hint" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <!--TextView 文本  html的p标签-->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/register_address"
                    android:textSize="14dp" />
                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@null"
                    android:textSize="14dp"
                    android:maxLength="50"
                    android:singleLine="true"
                    android:hint="@string/register_address_hint" />
            </LinearLayout>
            <!--密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="14dp"
                    android:text="@string/register_password"/>
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:textSize="14dp"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:hint="@string/register_password_hint"/>
            </LinearLayout>
            <!--确认密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_bottom"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="14dp"
                    android:text="@string/register_confirmPassword"/>
                <EditText
                    android:id="@+id/et_password_sure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:textSize="14dp"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:hint="@string/register_confirmPassword_hint"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:text="@string/register_back"/>
            <!--注册按钮-->
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_border_fill"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textAllCaps="false"
                android:text="@string/register_register_btn"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>