<?xml version="1.0" encoding="utf-8"?>
<!--线性布局  LinearLayout 根布局-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <!--标题栏-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:gravity="center"-->
<!--        android:background="@color/purple_700">-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="16dp"-->
<!--            android:text="@string/login_title"/>-->
<!--    </LinearLayout>-->
    <!--表单布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ic_main"/>
        <!--账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <!--TextView 文本  html的p标签-->
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/login_account"/>

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/login_account_hint"
                android:singleLine="true"
                android:textSize="14dp" />
        </LinearLayout>

        <!--密码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_bottom"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="14dp"
                android:text="@string/login_password"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textPassword"
                android:textSize="14dp"
                android:singleLine="true"
                android:hint="@string/login_password_hint"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:text="@string/login_register_btn"
                android:textSize="16dp" />
        </RelativeLayout>
        <!--登录按钮-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_border_fill"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textAllCaps="false"
            android:text="@string/login_login_btn"/>
    </LinearLayout>
</LinearLayout>